--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -22,3 +22,11 @@
 	width: $width;
 	height: $height;
 }
+
+@mixin selection($bg, $color: inherit, $text-shadow: none){
+  * {
+    &::-moz-selection { background: $bg; color: $color; text-shadow: $text-shadow; }
+    &::-webkit-selection { background: $bg; color: $color; text-shadow: $text-shadow; }
+    &::selection { background: $bg; color: $color; text-shadow: $text-shadow; }
+  }
+}
