--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -25,6 +25,7 @@ $header-height: 30px;
 	}
 	h1{
 		margin-top:15px;
+		margin-bottom:18px;
 		text-align:center;
 		font-weight: bold;
 		font-size: 48px;
